Fix hero wrapper and highlight on mobile

--- a/content/style.css
+++ b/content/style.css
@@ -940,6 +940,11 @@ textarea.w-select {
 		left: auto;
 		right: auto
 	}
+
+	.h-hero-header-highlight {
+		height: 11em;
+		overflow: hidden;
+	}
 }
 
 @media screen and (max-width:767px) {
@@ -3716,7 +3721,7 @@ body.dark-theme .btn-link-underline-hover {
 		grid-row-gap: 40px;
 		flex-direction: column;
 		align-items: flex-start;
-		padding-top: 48px
+		padding-top: 17px
 	}
 
 	.h-services-tags {
